<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_systems"
        android:icon="@drawable/systems"
        android:title="@string/title_syatems" />

    <item
        android:id="@+id/navigation_standers"
        android:icon="@drawable/standers"
        android:title="@string/title_standers" />
    <!--<item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_map_black_24dp"
        android:title="@string/title_location" />-->
    <item
        android:id="@+id/navigation_contact"
        android:icon="@drawable/ic_language_black_24dp"
        android:title="@string/title_contact" />


    <item
        android:id="@+id/navigation_about"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/title_about" />
</menu>
